# b2

./: .gitignore  .travis.helper.sh  .travis.yml  CMakeLists.txt  README.md
cmake/: FindLLVM.cmake  FindPHP.cmake
lib/: CMakeLists.txt  utils.hpp
lib/ast/: ast.hpp  expressions.hpp  visitors.hpp
lib/ast/passes/: CMakeLists.txt  coalesce_rawblocks_pass.cpp  coalesce_rawblocks_pass.hpp  convert_literal_printblock_to_rawblock_pass.cpp  convert_literal_printblock_to_rawblock_pass.hpp  fold_constant_expressions_pass.cpp  fold_constant_expressions_pass.hpp  pass.hpp  pass_manager.cpp  pass_manager.hpp  resolve_includes_pass.cpp  resolve_includes_pass.hpp
lib/backends/: CMakeLists.txt
lib/backends/javascript/: CMakeLists.txt  code_emitter.hpp  javascript_visitor.cpp  javascript_visitor.hpp
lib/backends/llvm/: CMakeLists.txt  llvm_backend.cpp  llvm_backend.hpp  llvm_bindings.h  llvm_visitor.cpp  llvm_visitor.hpp
lib/parser/: CMakeLists.txt  parser.cpp  parser.hpp  syntax.hpp  syntax.l  syntax.y
lib/utils/: CMakeLists.txt  print_visitor.cpp  print_visitor.hpp
src/: CMakeLists.txt
src/ast_print/: CMakeLists.txt  print.cpp
src/js_precompiler/: CMakeLists.txt  compiler.cpp
src/php/: CMakeLists.txt  php_b2.cpp  php_bindings.cpp  php_bindings.hpp  php_bindings_functions.c  php_template.h
src/simple/: CMakeLists.txt  simple_bindings.cpp  simple_bindings.hpp  simple_bindings_functions.c  simple_variant.h
tests/: runner.py
tests/js_precompiler/: blocks.test  undefined_check.test
tests/parser/: blocks.test  constant_folding_pass.test  division_by_zero.test  empty_file.test  failures.test  include_non_existing_file.test  literal_print_to_raw_conversion_pass.test  modulo_by_zero.test  resolve_includes_pass.test  simple_expressions.test  single_raw_block.test  specials.test
tests/php_binding/: blocks.test  engine_refcount.test  foo.test  method_calls.test  nullterminate.test  simple_expressions.test
tools/: CMakeLists.txt  bin2c.c
